--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -67,6 +67,6 @@ footer a {
     }
 
     footer {
-        transform: translateY(110rem);
+        transform: translateY(160rem);
     }
 }
